--- a/assets/css/skills.css
+++ b/assets/css/skills.css
@@ -1,7 +1,7 @@
 /*-----------------skills--------------------*/
 
 #habilidades {
-    background-image: linear-gradient(to bottom, #48c6ef 0%, #6f86d6 100%);
+    background-image: linear-gradient(to bottom, #48c6ef 0%, #5a7dfc9d 100%);
     font-family: 'Roboto Mono', monospace;
 }
 
