--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,66 +1,94 @@
-
 /*-------------------Contato------------------*/
 #contato {
-    background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
-    font-family: 'Roboto Mono', monospace;
+  background-image: linear-gradient(to bottom, #89f7fe 0%, #66a6ff 100%);
+  font-family: "Roboto Mono", monospace;
 }
 
 .centralizador-ct {
-    padding-top: 70px;
+  padding-top: 70px;
 }
 
 .texto-ct {
-    text-align: center;
-    padding-bottom: 70px;
+  text-align: center;
+  padding-bottom: 70px;
 }
 .centralizador-ct2 {
-    display: flex;
-    justify-content: center;
-    padding-bottom: 70px;
+  display: flex;
+  justify-content: center;
+  padding-bottom: 70px;
 }
 
 .container-contato {
-    height: 400px;
-    width: 400px;
-    background-image: linear-gradient(120deg, #a1c4fdde 10%, #c2e9fbde 100%);
-    border-radius: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  height: 400px;
+  width: 400px;
+  background-image: linear-gradient(120deg, #00cdab31 0%, #8ddad5e7 100%);
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .input {
-    width: 100%;
-    padding: 10px 20px;
-    margin: 8px 0;
-    border-radius: 5px;
-    border: 1px solid gray;
-    outline: none;
-    color: red;
+  width: 100%;
+  padding: 10px 20px;
+  margin: 8px 0;
+  border-radius: 5px;
+  border: 1px solid gray;
+  outline: none;
+  color: red;
 }
 
-.input:is(:focus, :valid){
-    border-width: 2px;
-    border-color: #a18cd1;
+.input:is(:focus, :valid) {
+  border-width: 2px;
+  border-color: #a18cd1;
 }
 
 .textarea {
-    width: 100%;
-    height: 59px;
-    padding: 15px;
-    border-radius: 5px;
-    border: 1px solid gray;
-    outline: none;
-    resize: none;
-    color: red;
-    max-height: 200px;
+  width: 100%;
+  height: 59px;
+  padding: 15px;
+  border-radius: 5px;
+  border: 1px solid gray;
+  outline: none;
+  resize: none;
+  color: red;
+  max-height: 200px;
 }
 
-.textarea::-webkit-scrollbar{
-    width: 0px;
+.textarea::-webkit-scrollbar {
+  width: 0px;
 }
 
-.textarea:is(:focus, :valid){
-    border-width: 2px;
-    border-color: #a18cd1;
+.textarea:is(:focus, :valid) {
+  border-width: 2px;
+  border-color: #a18cd1;
+}
+
+.botao-ct {
+  width: 120px;
+  font-size: 16px;
+  font-weight: 600;
+  color: #fff;
+  cursor: pointer;
+  margin: 20px 0px;
+  height: 50px;
+  text-align: center;
+  border: none;
+  background-size: 300% 100%;
+  border-radius: 50px;
+}
+
+.botao-ct:focus {
+  outline: none;
+}
+
+.botao-ct.bt2 {
+  background-image: linear-gradient(
+    to right,
+    #6253e1,
+    #852d91,
+    #a3a1ff,
+    #f24645
+  );
+  box-shadow: 0 4px 15px 0 rgba(126, 52, 161, 0.75);
 }
